fix: button spacing amplication/site#140

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -676,6 +676,7 @@ section.auto-height {
 
   &.social-white {
     background-color: $white;
+    margin-right: 0.5rem;
   }
 }
 
